--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.9.2/css/flag-icons.min.css"/>
 </head>
 <body class="mat-typography">
   <!-- <noscript> Your JavaScript is disabled </noscript> -->
@@ -22,7 +23,7 @@
     justify-items: center;
     align-content: space-evenly;
     align-items: center;
-    font-family: fantasy;
+    font-family: Roboto !important;
     font-weight: 800;
     /* background-color: red; */
     height: 100vh;
